<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uve</string>
    <string name="hello_world">Hello world!</string>
    <string name="gen_ok">OK</string>
    <string name="gen_cancel">Cancel</string>
    <string name="gen_notnow">Not now</string>
    <string name="gen_please_wait">Please wait</string>
    <string name="gen_no">No</string>
    <string name="gen_yes">Yes</string>
    <string name="gen_close">Close</string>
    <string name="w200">Thunderstorm with light rain</string>
    <string name="w201">Thunderstorm with rain</string>
    <string name="w202">Thunderstorm with heavy rain</string>
    <string name="w210">Light thunderstorm</string>
    <string name="w211">Thunderstorm</string>
    <string name="w212">Heavy thunderstorm</string>
    <string name="w221">Ragged thunderstorm</string>
    <string name="w230">Thunderstorm with light drizzle</string>
    <string name="w231">Thunderstorm with drizzle</string>
    <string name="w232">Thunderstorm with heavy drizzle</string>
    <string name="w300">Light intensity drizzle</string>
    <string name="w301">Drizzle</string>
    <string name="w302">Heavy intensity drizzle</string>
    <string name="w310">Light intensity drizzle rain</string>
    <string name="w311">Drizzle rain</string>
    <string name="w312">Heavy intensity drizzle rain</string>
    <string name="w313">Shower rain and drizzle</string>
    <string name="w314">Heavy shower rain and drizzle</string>
    <string name="w321">Shower drizzle</string>
    <string name="w500">Light rain</string>
    <string name="w501">Moderate rain</string>
    <string name="w502">Heavy intensity rain</string>
    <string name="w503">Very heavy rain</string>
    <string name="w504">Extreme rain</string>
    <string name="w511">Freezing rain</string>
    <string name="w520">Light intensity shower rain</string>
    <string name="w521">Shower rain</string>
    <string name="w522">Heavy intensity shower rain</string>
    <string name="w531">Ragged shower rain</string>
    <string name="w600">Light snow</string>
    <string name="w601">Snow</string>
    <string name="w602">Heavy snow</string>
    <string name="w611">Sleet</string>
    <string name="w612">Shower sleet</string>
    <string name="w615">Light rain and snow</string>
    <string name="w616">Rain and snow</string>
    <string name="w620">Light shower snow</string>
    <string name="w621">Shower snow</string>
    <string name="w622">Heavy shower snow</string>
    <string name="w701">Mist</string>
    <string name="w711">Smoke</string>
    <string name="w721">Haze</string>
    <string name="w731">Sand, dust whirls</string>
    <string name="w741">Fog</string>
    <string name="w751">Sand</string>
    <string name="w761">Dust</string>
    <string name="w762">Volcanic ash</string>
    <string name="w771">Squalls</string>
    <string name="w781">Tornado</string>
    <string name="w800">Clear sky</string>
    <string name="w801">Few clouds</string>
    <string name="w802">Scattered clouds</string>
    <string name="w803">Broken clouds</string>
    <string name="w804">Overcast clouds</string>
    <string name="w900">Tornado</string>
    <string name="w901">Tropical storm</string>
    <string name="w902">Hurricane</string>
    <string name="w903">Cold</string>
    <string name="w904">Hot</string>
    <string name="w905">Windy</string>
    <string name="w906">Hail</string>
    <string name="w951">Calm</string>
    <string name="w952">Light breeze</string>
    <string name="w953">Gentle breeze</string>
    <string name="w954">Moderate breeze</string>
    <string name="w955">Fresh breeze</string>
    <string name="w956">Strong breeze</string>
    <string name="w957">High wind, near gale</string>
    <string name="w958">Gale</string>
    <string name="w959">Severe gale</string>
    <string name="w960">Storm</string>
    <string name="w961">Violent storm</string>
    <string name="w962">Hurricane</string>
    <string name="no_devices">There is no paired uve device\n:(\n\nTap here to reload!</string>
    <string name="no_device_ready">There is no ready uve device\n:(</string>
    <string name="new_device_title">A new device has been found!</string>
    <string name="new_device_msg">Please name it!</string>
    <string name="day_everyday">Each day</string>
    <string name="day_sunday">Sunday</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="no_bt">Your device is not bluetooth capable. Sorry for that.\n:(</string>
    <string name="bt_disabled_title">Bluetooth</string>
    <string name="bt_disabled">Bluetooth is not enabled on your device. Would you like to enable it?</string>
    <string name="bt_enabling">Bluetooth is being enabled. Please relaunch the app!</string>
    <string name="drawer_devices">Devices</string>
    <string name="drawer_exit">Stop checking devices and exit</string>
    <string name="drawer_exit_dialog_title">Are you sure?</string>
    <string name="loading_weather">Loading weather info...</string>
    <string name="reconnect_text_rare">This is device is currently offline.\nMake sure it is charged and bring it closer.\nIf it is on, it will be connected automatically.</string>
    <string name="reconnect_text_trying">Connecting...</string>
    <string name="gen_info">Information</string>
    <string name="gen_error">Error</string>
    <string name="gen_back">Back</string>
    <string name="gen_just_a_second">It is just a second...</string>
    <string name="sticky_notification_title">uve</string>
    <string name="sticky_notification_msg">Service is started.</string>
    <string name="sticky_notification_connected" formatted="false">Connected to: %d of %d device(s).</string>
    <string name="sticky_notification_all_connected">Connected to all of your device(s).</string>
    <string name="sticky_notification_none_connected">Connected to none of your device(s).</string>
    <string name="child_notification_title">Child alert</string>
    <string name="child_notification_water" formatted="false">WARNING: %s is in water!</string>
    <string name="child_notification_away" formatted="false">WARNING: %s device is disconnected!</string>
    <string name="child_notification" formatted="false">WARNING: %s reached its UV dose!</string>
    <string name="sun_dialog_mode" formatted="false">MODE</string>
    <string name="sun_dialog_alert" formatted="false">ALERT</string>
    <string name="sun_dialog_protection" formatted="false">MILK</string>
    <string name="sun_dialog_reset" formatted="false">RESET</string>
    <string name="sun_dialog_start" formatted="false">START</string>
    <string name="sun_dialog_alter" formatted="false">ALTER</string>
    <string name="sun_dialog_graph" formatted="false">STATS</string>
    <string name="measure_mode_normal">NRM</string>
    <string name="measure_mode_uv">UV</string>
    <string name="measure_mode_dose">DOSE</string>
    <string name="measure_mode_solarium">SOL</string>
    <string name="alert_mode_light">LIGHT</string>
    <string name="alert_mode_3short">3 VIBS</string>
    <string name="alert_mode_3long">3 VIBS</string>
    <string name="alert_mode_1long">1 VIB</string>
    <string name="alert_mode_9short">9 VIBS</string>
    <string name="alert_mode_3delayed">3 VIBS</string>
    <string name="planned_title">Please choose measure mode!</string>
    <string name="planned_back_front">Choose this measure mode, if you want to tan your back first, then your belly.</string>
    <string name="planned_front_back">Choose this measure mode, if you want to tan your belly first, then your back.</string>
    <string name="first_measure_melanin_msg">Please stand by for measuring your melanin index.\nInstruction 1\nInstruction 2</string>
    <string name="first_measure_eritema_msg">Please stand by for measuring your eritema index.\nInstruction 1\nInstruction 2</string>
    <string name="measure">Measure</string>
    <string name="settings_title" formatted="false">%s\'s settings</string>
    <string name="settings_child_away">Alert, when child is away</string>
    <string name="settings_child_water">Alert, when child is in water</string>
    <string name="settings_measure_melanin">Measure your melanine index</string>
    <string name="settings_measure_eritema">Measure your eritema index</string>
    <string name="settings_night_mode">Switch off in the dark</string>
    <string name="settings_call_alert">Vibrate on an incoming call or SMS</string>
    <string name="settings_sleep">Disconnect, go in sleep mode</string>

</resources>