<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sunDialogRoot"
    android:layout_width="300dp"
    android:layout_height="300dp" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/sun_shadow" />

    <ImageView
        android:id="@+id/sunDialogContentBackground"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/sun_circle_dialog_bg" />

    <RelativeLayout
        android:id="@+id/sunDialogMeasureMode"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/sun_circle_dialog_button_bg" >

        <ImageView
            android:id="@+id/sunDialogMeasureModePic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/measure_mode_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sunDialogMeasureModePic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/sun_dialog_mode"
            android:textColor="#000"
            android:textSize="11sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sunDialogAlertType"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/sun_circle_dialog_button_bg" >

        <ImageView
            android:id="@+id/sunDialogAlertTypePic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/alert_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sunDialogAlertTypePic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/sun_dialog_alert"
            android:textColor="#000"
            android:textSize="11sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sunDialogProtection"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:background="@drawable/sun_circle_dialog_button_bg" >

        <ImageView
            android:id="@+id/sunDialogProtectionPic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/lotion" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sunDialogProtectionPic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/sun_dialog_protection"
            android:textColor="#000"
            android:textSize="11sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sunDialogReset"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:background="@drawable/sun_circle_dialog_button_bg" >

        <ImageView
            android:id="@+id/sunDialogResetPic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/reset_measure" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sunDialogResetPic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/sun_dialog_reset"
            android:textColor="#000"
            android:textSize="11sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sunDialogStart"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/sun_circle_dialog_button_bg" >

        <ImageView
            android:id="@+id/sunDialogStartPic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/status_off" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sunDialogStartPic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="3dp"
            android:text="@string/sun_dialog_start"
            android:textColor="#000"
            android:textSize="11sp" />
    </RelativeLayout>

</RelativeLayout>